--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@ var ctx = document.getElementById("monthly_charge");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["PUX", "Affectiva", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)", "Eyedea (Plan I)",
-        "Eyedea (Plan J)"],
+        labels: ["PUX", "Affectiva", "Lambda Labs (MEGA)", "Lambda Labs (ULTRA)", "Lambda Labs (PRO)", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)", "Eyedea (Plan I)",
+        "Eyedea (Plan J)", "Lambda Labs (BASIC)"],
         datasets: [{
             label: 'Monthly Charge (USD)',
-            data: [2500, 250, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41],
+            data: [2500, 250, 1449, 449, 149, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
