--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ This is to date</p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<canvas id="one_time_charge" width="400" height="400"></canvas>
+<canvas id="one_time_charge" width="400" height="400"></canvas><br>
 <script>
 var ctx = document.getElementById("one_time_charge");
 var myChart = new Chart(ctx, {
