--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ This is to date</p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<canvas id="one_time_charge" width="400" height="400"></canvas><br>
+<canvas id="one_time_fee" width="400" height="400"></canvas><br>
 <script>
-var ctx = document.getElementById("one_time_charge");
+var ctx = document.getElementById("one_time_fee");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
@@ -67,7 +67,7 @@ var myChart = new Chart(ctx, {
         "CCV", "CLandmark", "Deep Face Representation", "Dlib", "FaceRect", "libface", "libfacedetection", "M. Hammond", "OpenBR",
         "OpenCV", "OpenFace", "OpenIMAJ", "Semantic Vision Tech.", "Visual Geometry Group"],
         datasets: [{
-            label: 'One-time Charge (USD)',
+            label: 'One-time Fee (USD)',
             data: [25000, 7434.024, 1919.50, 1886.54, 1032.19, 998.79, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -123,7 +123,7 @@ var myChart = new Chart(ctx, {
     options: {
         title: {
             display: true,
-            text: 'One-time Charge'
+            text: 'One-time Fee'
         },
         scales: {
             yAxes: [{
@@ -136,16 +136,16 @@ var myChart = new Chart(ctx, {
 });
 </script>
 
-<canvas id="monthly_charge" width="400" height="400"></canvas>
+<canvas id="monthly_fee" width="400" height="400"></canvas>
 <script>
-var ctx = document.getElementById("monthly_charge");
+var ctx = document.getElementById("monthly_fee");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: ["PUX", "Lambda Labs (MEGA)", "Lambda Labs (ULTRA)", "Affectiva", "Lambda Labs (PRO)", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)", "Eyedea (Plan I)",
         "Eyedea (Plan J)", "Lambda Labs (BASIC)"],
         datasets: [{
-            label: 'Monthly Charge (USD)',
+            label: 'Monthly Charge (USD/month)',
             data: [2500, 1449, 449, 250, 149, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -191,7 +191,74 @@ var myChart = new Chart(ctx, {
     options: {
         title: {
             display: true,
-            text: 'Monthly Charge'
+            text: 'Monthly Fee'
+        },
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
+</script>
+
+<canvas id="transaction_fee" width="400" height="400"></canvas>
+<script>
+var ctx = document.getElementById("transaction_fee");
+var myChart = new Chart(ctx, {
+    type: 'horizontalBar',
+    data: {
+        labels: ["Stupefix"],
+        datasets: [{
+            label: 'Transaction Fee (USD/transaction)',
+            data: [0.02],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)',
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)',
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)',
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)',
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        title: {
+            display: true,
+            text: 'Transaction Fee'
         },
         scales: {
             yAxes: [{
