--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ var myChart = new Chart(ctx, {
 });
 </script>
 
-<canvas id="monthly_fee" width="400" height="400"></canvas>
+<canvas id="monthly_fee" width="400" height="400"></canvas><br>
 <script>
 var ctx = document.getElementById("monthly_fee");
 var myChart = new Chart(ctx, {
