--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ var myChart = new Chart(ctx, {
           "SkyBiometry (P1)", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)", "Eyedea (Plan I)",
           "Eyedea (Plan J)", "SkyBiometry (Free)", "Lambda Labs (Basic)"],
         datasets: [{
-            label: 'Monthly Charge (USD/month)',
+            label: 'Monthly Fee (USD/month)',
             data: [2500, 1449, 449, 250, 149, 110.96, 55.47, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
