--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@ var ctx = document.getElementById("monthly_fee");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["PUX", "Lambda Labs (Mega)", "Lambda Labs (Ultra)", "Affectiva", "Meerkat (Pro)", "Lambda Labs (Pro)",
+        labels: ["PUX", "Lambda Labs (Mega)", "Kairos (Enterprise)", "Kairos (Starter)", "Lambda Labs (Ultra)", "Affectiva", "Meerkat (Pro)", "Lambda Labs (Pro)",
           "SkyBiometry (P2)", "Meerkat (Standard)", "SkyBiometry (P1)", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)",
-          "Eyedea (Plan I)", "Eyedea (Plan J)", "SkyBiometry (Free)", "Lambda Labs (Basic)"],
+          "Eyedea (Plan I)", "Eyedea (Plan J)", "Kairos (Trial)", "Lambda Labs (Basic)", "SkyBiometry (Free)"],
         datasets: [{
             label: 'Monthly Fee (USD/month)',
-            data: [2500, 1449, 449, 250, 245, 149, 110.96, 72, 55.47, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0, 0],
+            data: [2500, 1449, 1000, 500, 449, 250, 245, 149, 110.96, 72, 55.47, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
