--- a/index.html
+++ b/index.html
@@ -211,10 +211,12 @@ var ctx = document.getElementById("transaction_fee");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ["Stupefix", "Microsoft (Standard)", "Microsoft (Free)"],
+        labels: ["Stupefix", "Google (1,001 - 1 million transactions / month)", "Google (1,000,001 - 5 million transactions / month)",
+        "Microsoft (Standard)", "Google (5,000,001 - 20 million transactions / month)", "Google (1 - 1,000 transactions / month)",
+        "Microsoft (Free)"],
         datasets: [{
             label: 'Transaction Fee (USD / 1000 transactions)',
-            data: [20, 1.5, 0],
+            data: [20, 2.5, 1.5, 1.5, 0.6, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
