--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ var myChart = new Chart(ctx, {
     data: {
         labels: ["Stupefix", "Google (1,001 - 1 million transactions / month)", "Google (1,000,001 - 5 million transactions / month)",
         "Microsoft (Standard)", "Google (5,000,001 - 20 million transactions / month)", "Google (1 - 1,000 transactions / month)",
-        "Microsoft (Free)"],
+        "Microsoft (30,000 transactions / month)"],
         datasets: [{
             label: 'Transaction Fee (USD / 1000 transactions)',
             data: [20, 2.5, 1.5, 1.5, 0.6, 0, 0],
@@ -376,10 +376,10 @@ var myChart = new Chart(ctx, {
 <a href="http://www.facerapp.com/">FaceR</a>,
 <a href="http://apicloud.me/apis/facerect/demo/">FaceRect</a>,
 <a href="http://www.facevisa.com/">Facevisa</a>,
-<a href="http://www.lambdal.com/">Lambda Labs</a>,
 <a href="https://cloud.google.com/vision/">Google</a>,
 <a href="https://www.kairos.com/face-recognition-api">Kairos</a>,
 <a href="https://developers.keylemon.com/documentation/reference">KeyLemon</a>,
+<a href="http://www.lambdal.com/">Lambda Labs</a>,
 <a href="https://www.linkface.cn/">Linkface SDK</a>,
 <a href="http://www.meerkat.com.br/solution_fr.html">Meerkat</a>,
 <a href="https://www.microsoft.com/cognitive-services/en-us/face-api">Microsoft</a>,
