--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
         labels: ["Stupefix", "Google (1,001–1 million transactions / month)", "Google (1,000,001–5 million transactions / month)",
-        "Microsoft (Standard)", "Google (5,000,001–20 million transactions / month)", "Google (1–1,000 transactions / month)",
+        "Microsoft (> 30,000 transactions / month)", "Google (5,000,001–20 million transactions / month)", "Google (1–1,000 transactions / month)",
         "Microsoft (1–30,000 transactions / month)"],
         datasets: [{
             label: 'Transaction Fee (USD / 1000 transactions)',
