--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@ var myChart = new Chart(ctx, {
         datasets: [
             {
                 label: "Maximum ±Degree of Yaw",
-                backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                fillColor: 'rgba(255, 99, 132, 0.2)',
                 borderColor: 'rgba(255, 99, 132, 1)',
                 data: [25]
             },
             {
                 label: "Pitch",
-                backgroundColor: 'rgba(255, 206, 86, 0.2)',
+                fillColor: 'rgba(255, 206, 86, 0.2)',
                 borderColor: 'rgba(255, 206, 86, 1)',
                 data: [25]
             },
             {
                 label: "Roll",
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                fillColor: 'rgba(75, 192, 192, 0.2)',
                 borderColor: 'rgba(75, 192, 192, 1)',
                 data: [25]
             },
