--- a/index.html
+++ b/index.html
@@ -67,20 +67,23 @@ var myChart = new Chart(ctx, {
         datasets: [
             {
                 label: "Maximum ±Degree of Yaw",
-                fillColor: 'rgba(255, 99, 132, 0.2)',
+                backgroundColor: 'rgba(255, 99, 132, 0.2)',
                 borderColor: 'rgba(255, 99, 132, 1)',
+                borderWidth: 1,
                 data: [25]
             },
             {
                 label: "Pitch",
-                fillColor: 'rgba(255, 206, 86, 0.2)',
+                backgroundColor: 'rgba(255, 206, 86, 0.2)',
                 borderColor: 'rgba(255, 206, 86, 1)',
+                borderWidth: 1,
                 data: [25]
             },
             {
                 label: "Roll",
-                fillColor: 'rgba(75, 192, 192, 0.2)',
+                backgroundColor: 'rgba(75, 192, 192, 0.2)',
                 borderColor: 'rgba(75, 192, 192, 1)',
+                borderWidth: 1,
                 data: [25]
             },
         ]
