--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var myChart = new Chart(ctx, {
     options: {
         title: {
             display: true,
-            text: 'Robustness against Yaw/Pitch/Roll'
+            text: 'Robustness against Yaw/Pitch/Roll Claimed by the Providers'
         },
         scales: {
             yAxes: [{
