--- a/index.html
+++ b/index.html
@@ -63,28 +63,29 @@ var ctx = document.getElementById("yaw");
 var myChart = new Chart(ctx, {
     type: 'horizontalBar',
     data: {
-        labels: ['Affectiva', 'Ayonix', 'Cognitec', 'FaceFirst'],
+        labels: ['Affectiva', 'AllGo Embed. Sys.', 'BioID', 'Ayonix', 'Cognitec', 'FaceFirst' ,'FacePhi', 'Kairos', 'KeyLemon',
+        'Neurotechnology', 'Noldus', 'Sightcorp', 'SkyBiometry', 'Tastenkunst', 'Visage Tech.', 'Windows'],
         datasets: [
             {
                 label: "Maximum ±Degree of Yaw",
                 backgroundColor: 'rgba(255, 99, 132, 0.2)',
                 borderColor: 'rgba(255, 99, 132, 1)',
                 borderWidth: 1,
-                data: [25, 30, 15, 15]
+                data: [25, 20, 30, 30, 15, 15, 15, 45, 20, 45, 40, 4.4, 45, 45, 90, 15]
             },
             {
                 label: "Pitch",
                 backgroundColor: 'rgba(255, 206, 86, 0.2)',
                 borderColor: 'rgba(255, 206, 86, 1)',
                 borderWidth: 1,
-                data: [25, 30, 15, 15]
+                data: [25, 20, 30, 30, 15, 15, 15, null, 20, 15, null, 3.9, 25, 20, 40, 15]
             },
             {
                 label: "Roll",
                 backgroundColor: 'rgba(75, 192, 192, 0.2)',
                 borderColor: 'rgba(75, 192, 192, 1)',
                 borderWidth: 1,
-                data: [25, null, null, 20]
+                data: [25, null, 30, null, null, 20, 15, null, 20, 180, null, null, 180, null, 40, null]
             },
         ]
     },
