--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ var myChart = new Chart(ctx, {
         "CCV", "CLandmark", "Deep Face Representation", "Dlib", "FaceRect", "libface", "libfacedetection", "M. Hammond", "OpenBR",
         "OpenCV", "OpenFace", "OpenIMAJ", "Semantic Vision Tech.", "Visual Geometry Group"],
         datasets: [{
-            label: 'One-time Fee (USD)',
+            label: 'USD',
             data: [25000, 7434.024, 1919.50, 1886.54, 1032.19, 998.79, 2.22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -194,7 +194,7 @@ var myChart = new Chart(ctx, {
           "SkyBiometry (P2)", "Meerkat (Standard)", "SkyBiometry (P1)", "Eyedea (Plan E)", "Eyedea (Plan F)", "Eyedea (Plan G)", "Eyedea (Plan H)",
           "Eyedea (Plan I)", "Eyedea (Plan J)", "Kairos (Trial)", "Lambda Labs (Basic)", "SkyBiometry (Free)"],
         datasets: [{
-            label: 'Monthly Fee (USD/month)',
+            label: 'USD/month',
             data: [2500, 1449, 1000, 500, 449, 250, 245, 149, 110.96, 72, 55.47, 36.92, 34.14, 32.34, 30.95, 21.19, 18.41, 0, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
@@ -263,7 +263,7 @@ var myChart = new Chart(ctx, {
         "Microsoft (> 30,000 transactions / month)", "Google (5,000,001–20 million transactions / month)", "Google (1–1,000 transactions / month)",
         "Microsoft (1–30,000 transactions / month)"],
         datasets: [{
-            label: 'Transaction Fee (USD / 1000 transactions)',
+            label: 'USD / 1000 transactions',
             data: [20, 2.5, 1.5, 1.5, 0.6, 0, 0],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
