--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ This is to date</p>
 var ctx = document.getElementById("yaw_our");
 var myLineChart = new Chart(ctx, {
     type: 'line',
-    data: data,
-    options: options
+    data: data
+    //options: options
 });
 var data = {
     labels: ["January", "February", "March", "April", "May", "June", "July"],
