--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ var ctx = document.getElementById("yaw_our");
 var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-        labels: ['0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90'],
+        labels: ['Sample A, B, C, D, E, F, G, H, I, J'],
         datasets: [
             {
                 label: "ColorReco",
                 fill: false,
                 borderColor: 'rgba(255, 99, 132, 1)',
-                data: [25, 20, 30, 30, 15, 15, 15, 45, 20, 45, 40, 4.4, 45, 45, 90, 15, 10, 20]
+                data: [25, 20, 30, 30, 15, 15, 15, 45, 20, 90]
             },
         ]
     },
