--- a/index.html
+++ b/index.html
@@ -60,32 +60,36 @@ This is to date</p>
 <canvas id="yaw_our" width="400" height="400"></canvas><br>
 <script>
 var ctx = document.getElementById("yaw_our");
-var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-        labels: ['Sample A, B, C, D, E, F, G, H, I, J'],
-        datasets: [
-            {
-                label: "ColorReco",
-                fill: false,
-                borderColor: 'rgba(255, 99, 132, 1)',
-                data: [25, 20, 30, 30, 15, 15, 15, 45, 20, 90]
-            },
-        ]
-    },
-    options: {
-        title: {
-            display: true,
-            text: 'Maximum ±Degree of Yaw/Pitch/Roll Claimed by the Providers'
-        },
-        scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
-                }
-            }]
+var data = {
+    labels: ["January", "February", "March", "April", "May", "June", "July"],
+    datasets: [
+        {
+            label: "My First dataset",
+            fill: false,
+            lineTension: 0.1,
+            backgroundColor: "rgba(75,192,192,0.4)",
+            borderColor: "rgba(75,192,192,1)",
+            borderCapStyle: 'butt',
+            borderDash: [],
+            borderDashOffset: 0.0,
+            borderJoinStyle: 'miter',
+            pointBorderColor: "rgba(75,192,192,1)",
+            pointBackgroundColor: "#fff",
+            pointBorderWidth: 1,
+            pointHoverRadius: 5,
+            pointHoverBackgroundColor: "rgba(75,192,192,1)",
+            pointHoverBorderColor: "rgba(220,220,220,1)",
+            pointHoverBorderWidth: 2,
+            pointRadius: 1,
+            pointHitRadius: 10,
+            data: [65, 59, 80, 81, 56, 55, 40],
         }
-    }
+    ]
+};
+var myLineChart = new Chart(ctx, {
+    type: 'line',
+    data: data,
+    options: options
 });
 </script>
 
