--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@ This is to date</p>
 <canvas id="yaw_our" width="400" height="400"></canvas><br>
 <script>
 var ctx = document.getElementById("yaw_our");
-var data = {
+var myLineChart = new Chart(ctx, {
+    type: 'line',
+    data = {
     labels: ["January", "February", "March", "April", "May", "June", "July"],
     datasets: [
         {
@@ -85,11 +87,8 @@ var data = {
             data: [65, 59, 80, 81, 56, 55, 40],
         }
     ]
-};
-var myLineChart = new Chart(ctx, {
-    type: 'line',
-    data: data,
-    options: options
+},
+    //options: options
 });
 </script>
 
