--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ var ctx = document.getElementById("yaw_our");
 var myLineChart = new Chart(ctx, {
     type: 'line',
     data: {
-        labels: ["January", "February", "March", "April", "May", "June", "July"],
+        labels: ["Sample A", "B", "C", "D", "E", "F", "G", "H", "I", "J"],
         datasets: [
             {
                 label: "My First dataset",
                 fill: false,
                 //lineTension: 0.1,
                 borderColor: "rgba(75,192,192,1)",
-                data: [65, 59, 80, 81, 56, 55, 40],
+                data: [65, 59, 80, 81, 56, 55, 40, 90, 30, 50],
             }
         ]
     },
