--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ var myLineChart = new Chart(ctx, {
         labels: ["Sample A", "B", "C", "D", "E", "F", "G", "H", "I", "J"],
         datasets: [
             {
-                label: "My First dataset",
+                label: "ColorReco",
                 fill: false,
                 //lineTension: 0.1,
-                borderColor: "rgba(75,192,192,1)",
+                borderColor: "rgba(255,0,0,1)",
                 data: [65, 59, 80, 81, 56, 55, 40, 90, 30, 50],
             }
         ]
@@ -77,7 +77,7 @@ var myLineChart = new Chart(ctx, {
     options: {
         title: {
             display: true,
-            text: 'Maximum ±Degree of Yaw/Pitch/Roll Claimed by the Providers'
+            text: 'Maximum ±Degree of Yaw Assessed by Us'
         },
         scales: {
             yAxes: [{
