--- a/index.html
+++ b/index.html
@@ -348,13 +348,11 @@ var myChart = new Chart(ctx, {
     },
     options: {
         title: {
-            display: true,
-            text: 'Transaction Fee'
-        },
         scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
+            xAxes: [{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'Transaction Fee (USD / 1,000 transactions)'
                 }
             }]
         }
