--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@ var myChart = new Chart(ctx, {
         }]
     },
     options: {
-        title: {
-            display: true,
-            text: 'One-time Fee'
+        legend: {
+            display: false
         },
         scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
+            xAxes: [{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'One-time Fee (USD)'
                 }
             }]
         }
@@ -278,14 +278,14 @@ var myChart = new Chart(ctx, {
         }]
     },
     options: {
-        title: {
-            display: true,
-            text: 'Monthly Fee'
+        legend: {
+            display: false
         },
         scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
+            xAxes: [{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'Monthly Fee (USD/month)'
                 }
             }]
         }
@@ -312,17 +312,7 @@ var myChart = new Chart(ctx, {
                 'rgba(75, 192, 192, 0.2)',
                 'rgba(153, 102, 255, 0.2)',
                 'rgba(255, 159, 64, 0.2)',
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)',
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)'
+                'rgba(255, 99, 132, 0.2)'
             ],
             borderColor: [
                 'rgba(255,99,132,1)',
@@ -331,17 +321,7 @@ var myChart = new Chart(ctx, {
                 'rgba(75, 192, 192, 1)',
                 'rgba(153, 102, 255, 1)',
                 'rgba(255, 159, 64, 1)',
-                'rgba(255,99,132,1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)',
-                'rgba(255,99,132,1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)'
+                'rgba(255,99,132,1)'
             ],
             borderWidth: 1
         }]
