--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ var myLineChart = new Chart(ctx, {
         ]
     },
     options: {
-        title: {
-            display: true,
-            text: 'Maximum ±Degree of Yaw Assessed by Us'
+        legend: {
+            display: false
         },
         scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
+            xAxes: [{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'Maximum ±Degree of Yaw'
                 }
             }]
         }
@@ -124,14 +124,14 @@ var myChart = new Chart(ctx, {
         ]
     },
     options: {
-        title: {
-            display: true,
-            text: 'Maximum ±Degree of Yaw/Pitch/Roll Claimed by the Providers'
+        legend: {
+            display: false
         },
         scales: {
-            yAxes: [{
-                ticks: {
-                    beginAtZero:true
+            xAxes: [{
+                scaleLabel: {
+                    display: true,
+                    labelString: 'Maximum ±Degree'
                 }
             }]
         }
