--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var myLineChart = new Chart(ctx, {
             {
                 label: "ColorReco",
                 fill: false,
-                //lineTension: 0.1,
+                lineTension: 0,
                 backgroundColor: "rgba(255,0,0,1)",
                 borderColor: "rgba(255,0,0,1)",
                 data: [65, 59, 80, 81, 56, 55, 40, 90, 30, 50],
