--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@ This is to date</p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
+<script>Chart.defaults.global.elements.line.borderJoinStyle='bevel'</script>
+
 <canvas id="yaw_our" width="400" height="400"></canvas><br>
 <script>
 var ctx = document.getElementById("yaw_our");
