--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ This is to date</p>
 <h3>
 <a id="results" class="anchor" href="#results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Results</h3>
 
-<script>Chart.defaults.global.elements.line.borderJoinStyle='round'</script>
+<script>Chart.defaults.global.elements.line.borderJoinStyle='round';</script>
 
 <canvas id="yaw_our" width="400" height="400"></canvas><br>
 <script>
