--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ var myLineChart = new Chart(ctx, {
             xAxes: [{
                 scaleLabel: {
                     display: true,
-                    labelString: 'People'
+                    labelString: 'Person'
                 }
             }],
             yAxes: [{
