--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ var myChart = new Chart(ctx, {
 <a href="https://www.linkface.cn/">Linkface API</a>,
 <a href="http://www.luxand.com/facesdk/">Luxand</a>,
 <a href="https://github.com/mc-jesus/face_detect_n_track">M. Hammond</a>,
+<a href="http://www.morphotrust.com/Technology/FaceRecognition.aspx">MorphoTrust</a>,
 <a href="http://www.neurotechnology.com/verilook.html">Neurotechnology</a>,
 <a href="http://www.noldus.com/facereader/facereader-api">Noldus</a>,
 <a href="http://www.mathworks.com/matlabcentral/fileexchange/29834-face-detection-using-support-vector-machine--svm-">O. Sakhi</a>,
