--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ var myChart = new Chart(ctx, {
 <a href="http://www.faceall.cn/">Faceall</a>,
 <a href="http://www.facerapp.com/">FaceR</a>,
 <a href="http://apicloud.me/apis/facerect/demo/">FaceRect</a>,
-<a href="http://www.facevisa.com/">Facevisa</a>,
+<a href="http://www.facevisa.com/">FaceVisa</a>,
 <a href="https://cloud.google.com/vision/">Google</a>,
 <a href="https://www.kairos.com/face-recognition-api">Kairos</a>,
 <a href="https://developers.keylemon.com/documentation/reference">KeyLemon</a>,
