--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ var myChart = new Chart(ctx, {
 <a href="http://www.facefirst.com/">FaceFirst</a>,
 <a href="http://tech.facephi.com/en/">FacePhi</a>,
 <a href="http://www.face-tek.com/e_product.php">Face-Tek</a>,
-<a href="http://www.facevisa.com/">Facevisa</a>,
+<a href="http://www.facevisa.com/">FaceVisa</a>,
 <a href="http://facewaretech.com/products/software/analyzer/">Faceware</a>,
 <a href="http://people.kyb.tuebingen.mpg.de/kienzle/facedemo/facedemo.htm">Fdlib</a>,
 <a href="http://www.iis.fraunhofer.de/en/ff/bsy/dl/shore.html">Fraunhofer IIS</a>,
