--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ This is to date</p>
 
 <ol>
 <li>the most comprehensive collection of benchmarks for face detection in the lab and in the purchasing process (11 benchmarks), and</li>
-<li>the most comprehensive list of commercialized face detection (total 62).</li>
+<li>the most comprehensive list of commercialized face detection (total 63).</li>
 </ol>
 
 <p>This could benefit face detection buyers' buying decision process and cost&ndash;benefit analysis.</p>
@@ -372,7 +372,7 @@ var myChart = new Chart(ctx, {
 <h3>
 <a id="resources" class="anchor" href="#resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Resources</h3>
 
-<p>Standalone face detection software (total 60):
+<p>Standalone face detection software (total 61):
 <a href="http://www.acsysbiometrics.com/">Acsys</a>,
 <a href="http://www.affectiva.com/solutions/apis-sdks/">Affectiva</a>,
 <a href="http://chenlab.ece.cornell.edu/projects/FaceTracking/">AMP Lab</a>,
@@ -411,6 +411,7 @@ var myChart = new Chart(ctx, {
 <a href="https://www.linkface.cn/">Linkface API</a>,
 <a href="http://www.luxand.com/facesdk/">Luxand</a>,
 <a href="https://github.com/mc-jesus/face_detect_n_track">M. Hammond</a>,
+<a href="https://megvii.com/">Megvii</a>,
 <a href="http://www.morphotrust.com/Technology/FaceRecognition.aspx">MorphoTrust</a>,
 <a href="http://www.neurotechnology.com/verilook.html">Neurotechnology</a>,
 <a href="http://www.noldus.com/facereader/facereader-api">Noldus</a>,
