--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ var myChart = new Chart(ctx, {
 <a href="http://facesdk.eu/">Imacondis</a>,
 <a href="http://vision.sysu.edu.cn/systems/surveillance/">IMC Lab</a>,
 <a href="http://www.insky.so/">Insky</a>,
-<a href="http://facedetection.jaysalvat.com/">Jay Salvat</a>,
+<a href="http://facedetection.jaysalvat.com/">J. Salvat</a>,
 <a href="https://msdn.microsoft.com/en-us/library/jj130970.aspx">Kinect</a>,
 <a href="http://libface.sourceforge.net/">libface</a>,
 <a href="https://github.com/ShiqiYu/libfacedetection">libfacedetection</a>,
